# renderingengine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  gen_solution.bat  vs-chromium-project.txt
shaders/: compileshaders.bat  meshfrag.hlsl  meshps.hlsl  meshvert.hlsl  meshvs.hlsl  screenps.hlsl  screenvs.hlsl  shader.vert  ui.frag  uips.hlsl  uivs.hlsl
src/: config.cpp  config.h  main.cpp
src/app/: application.cpp  application.h
src/apptimer/: apptimer.cpp  apptimer.h
src/assetmanager/: assetmanager.cpp  assetmanager.h  foldercrawler.h
src/gamestate/: gamestate.cpp  gamestate.h
src/imguicontroller/: imguicontroller.cpp  imguicontroller.h
src/input/: inputstate.cpp  inputstate.h
src/logger/: logger.h
src/paths/: paths.cpp  paths.h
src/serialization/: serialization.cpp  serialization.h
src/shadercompiler/: shaderbinary.cpp  shaderbinary.h  shadercompiler.cpp  shadercompiler.h
src/uid/: uid.cpp  uid.h
src/utils/: utils.h
src/vulkansubsystem/: buffer.cpp  buffer.h  imguirenderable.cpp  imguirenderable.h  meshrenderable.cpp  meshrenderable.h  renderable.h  screenrenderable.cpp  screenrenderable.h  vertexdescription.h  vulkancommon.h  vulkansubsystem.cpp  vulkansubsystem.h
